syntax = "proto3";
package calendar;

import "google/protobuf/timestamp.proto";


message CalendarEvent {
    int64 id = 1; // Unique ID number for this event
    string name = 2;

    enum CalendarEventType {
      TASK = 0;
      EVENT = 1;
      REMINDER = 2;
    }

    CalendarEventType type = 3;
    google.protobuf.Timestamp start_time = 4;
    google.protobuf.Timestamp end_time = 5;
  }

  message CalendarEventId {
    int64 id = 1; // Unique ID number for this event
  }

  message CalendarServiceError {
    int64 code = 1;
    string message = 2;
  }

service CalendarService {
    rpc NewEvent (CalendarEvent) returns (CalendarServiceError);
    rpc UpdateEvent (CalendarEvent) returns (CalendarServiceError);
    rpc GetEvent (CalendarEventId) returns (CalendarEvent);
    rpc DeleteEvent (CalendarEventId) returns (CalendarServiceError);
}
  